--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dompurify": "^3.0.8",
     "lodash": "^4.17.21",
     "next": "14.1.0",
+    "nodemailer": "^6.9.9",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -20,6 +21,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
