--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack -p 3020",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,10 +12,10 @@
     "antd": "^5.14.0",
     "dompurify": "^3.0.8",
     "lodash": "^4.17.21",
-    "next": "14.1.0",
+    "next": "^15.1.2",
     "nodemailer": "^6.9.9",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
