--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.14.0",
     "dompurify": "^3.0.8",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.474.0",
     "next": "^15.1.2",
     "nodemailer": "^6.9.9",
     "react": "^19.0.0",
