--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "^15.1.2",
+    "next-themes": "^0.4.4",
     "nodemailer": "^6.9.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "sonner": "^1.7.4"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
