--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "nodemailer": "^6.9.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.4.1",
-    "sonner": "^1.7.4"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
